# rust_webserver

./: Cargo.toml  README.md
src/: main.rs
src/kafka/: producer.rs
templates/: error.tera  result.tera  submit.tera
