[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
futures = "0.3.30"
tokio = "1.37.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rdkafka = { version = "0.25", features = ["dynamic-linking", "ssl", "sasl"] }

rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
